--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/auth/allUser"
+        "dest": "server.js"
       }
     ]
   }
